# see https://github.com/karlicoss/pymplate for up-to-date reference
[project]
dynamic = ["version"]  # version is managed by setuptools_scm
name = "stexport"
dependencies = []
requires-python = ">=3.9"

## these need to be set if you're planning to upload to pypi
description = "Backup and access your Stackexchange data"
license = {file = "LICENSE"}
authors = [
    {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
]
maintainers = [
    {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
]

[project.urls]
Homepage = "https://github.com/karlicoss/stexport"
##


[project.optional-dependencies]
dal = []
export = [
    "stackapi",
    "tenacity",  # for retrying API calls
]
optional = [
    "orjson",  # faster json processing
    "colorlog",
    "ijson",  # faster iterative json processing
]


[dependency-groups]
testing = [
    "pytest",
    "ruff",
    "mypy",
    "lxml",  # for mypy html coverage
]


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "dirty-tag"

# workaround for error during uv publishing
# see https://github.com/astral-sh/uv/issues/9513#issuecomment-2519527822
[tool.setuptools]
license-files = []
